--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <title>Guide</title>
   </head>
   <body>
-    <h1>test</h1>
+    <h1>Guide</h1>
+
+    <h2>python</h2>
+    <h2>java</h2>
+    <a href="https://www.codecademy.com/">Codecademy</a>
+    <p>先這兩個</p>
+
   </body>
 </html>
