--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
     <h1>Guide</h1>
 
-    <p>先這兩個，去下面這個連結找者兩個course，把他們都看完</p>
-    <h2>python</h2>
-    <h2>java</h2>
+    <p>先這兩個，去下面這個連結找者兩個course，把他們都看完先python再Java</p>
     <a href="https://www.codecademy.com/">Codecademy</a>
-
+    <h2>python</h2>
+    <h2>Learn java</h2>
+    
   </body>
 </html>
