--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    
     <title>Guide</title>
   </head>
   <body>
@@ -11,6 +17,6 @@
     <a href="https://www.codecademy.com/">Codecademy</a>
     <h2>python</h2>
     <h2>Learn java</h2>
-    
+
   </body>
 </html>
