--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-    
+
     <title>Guide</title>
   </head>
+  <style media="screen">
+    html {
+      font-family: Microsoft JhengHei !important;
+    }
+  </style>
   <body>
     <h1>Guide</h1>
 
-    <p>先這兩個，去下面這個連結找者兩個course，把他們都看完先python再Java</p>
+    <p>先這兩個，去下面這個連結找這兩個course，把他們都看完先python再Java</p>
     <a href="https://www.codecademy.com/">Codecademy</a>
     <h2>python</h2>
     <h2>Learn java</h2>
+
 
   </body>
 </html>
