--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   <body>
     <h1>Guide</h1>
 
-    <p>先這兩個，去下面這個連結找這兩個course，把他們都看完先python再Java</p>
+    <h4>先這兩個，去下面這個連結找這兩個course，把他們都看完先python再Java</h4>
     <a href="https://www.codecademy.com/">Codecademy</a>
-    <h2>python</h2>
+    <h2>Python</h2>
     <h2>Learn java</h2>
 
+    <h4>希望你一個禮拜之可以完成</h4>
 
   </body>
 </html>
