--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+<head>
+  <meta charset="utf-8">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
-    <title>Guide</title>
-  </head>
-  <style media="screen">
-    html {
-      font-family: Microsoft JhengHei !important;
-    }
-  </style>
-  <body>
-    <h1>Guide</h1>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
-    <h4>先這兩個，去下面這個連結找這兩個course，把他們都看完先python再Java</h4>
-    <h4><a href="https://www.codecademy.com/">Codecademy.com</a></h4>
-    <h2>Python</h2>
-    <h2>Learn java</h2>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
-    <h4>希望你一個禮拜之可以完成</h4>
+  <title>Guide</title>
+</head>
+<style media="screen">
+  html {
+    font-family: Microsoft JhengHei !important;
+  }
+</style>
 
-  </body>
+<body>
+  <h1>Guide</h1>
+
+  <h4>先這兩個，去下面這個連結找這兩個course，把他們都看完先python再Java</h4>
+  <h4><a href="https://www.codecademy.com/">Codecademy.com</a></h4>
+  <h2>Python</h2>
+  <h2>Learn java</h2>
+
+  <h4>希望你一個禮拜之可以完成</h4>
+
+</body>
+
 </html>
