--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 <body>
   <div class="container">
   <h1>Guide For Learning Coding</h1>
-
-  <h4>先看這兩個，去下面這個連結找這兩個course，把他們都看完 先python再Java 需要登入 就google登入就可以了
-        免費 進去的時候有all course 應該是在右上角點了才能看到全部的課程</h4>
+    
   <h4><a href="https://www.codecademy.com/">Codecademy.com</a></h4>
+  <h4>先看這兩個，去下面這個連結找這兩個course，把他們都看完 先python再Java 需要登入 就google登入就可以了
+        免費 進去的時候右上角有 Catalog 點了才能看到全部的課程找下面這兩個</h4>
+    
   <h2>Python</h2>
   <h2>Learn java</h2>
   
