--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     
   <h4><a href="https://www.codecademy.com/">Codecademy.com</a></h4>
   <h4>先看這兩個，去下面這個連結找這兩個course，把他們都看完 先python再Java 需要登入 就google登入就可以了
-        免費 進去的時候右上角有 Catalog 點了才能看到全部的課程找下面這兩個</h4>
-    
+        免費 進去的時候右上角有 Catalog 點了才能看到全部的課程找下面這兩個</h4>  
   <h2>Python</h2>
   <h2>Learn java</h2>
-  
+  <h4>再找一下還有Learn SQL 那就是你資料庫後面要教的東西你有空可以看看先把上面兩個topic做完<br>
+    java可能會遇到比較多問題有問題就直接問我</h4>
+  <h4>這幾個我只有sql 有看過（不過那是2年前的事了）我昨天有稍微看一下另外兩其實算做的不錯</h4>
   </div>
 </body>
 
